2006-01-23 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/glibc, profiles/lfs-6.1/flex, profiles/lfs-6.1/perl:
	  Fixed profile errors.

2006-01-22 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/message.cc, reroot/libreroot/packet.cc: Clarified
	  meaning of sender PID field in describe functions.

2006-01-21 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/ => oldreroot: Renamed to make room for new reroot.

	* reroot/libreroot: Added reroot IPC library.
	* reroot/reroot: Reserved for reroot.so, currently empty.
	* reroot/rerootctl: Added reroot daemon control program.
	* reroot/rerootd: Added simplified reroot daemon.

2006-01-03 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* All files with copyright notices: Updated years to include 2006.

	* scripts/pkginstall.in: Fixed a sed that broke when installing glibc
	  (because of "@" characters in the file names).

2005-12-28 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/*: Fixed all out-of-date download locations.

2005-12-25 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* Makefile, profiles/Makefile, profiles/lfs-6.1/*,
	  scripts/libprometheus.bash.in: Made many changes needed for the
	  LFS build script to work.
	* Makefile.defs, Makefile, profiles/Makefile: Finished `make install'
	  target in the Makefile.

2005-12-24 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkginfo.in: Found another one ;-).
	* scripts/pkgrm.in: Fixed more bugs.

2005-12-23 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/install-log: Resurrected install-log.
	* scripts/pkgrm.in, scripts/pkginfo.in, scripts/pkginstall.in:
	  Fixed various bugs.
	* scripts/pkgadd.in: Fixed saying one thing and doing another. D'oh!
	* scripts/pkgunpack.in, scripts/pkginstall.in: Moved `init_install'
	  function from pkginstall to pkgunpack.

2005-12-18 Oliver Brakmann <oliverbrakmann@users.berlios.de>
